restructured modules to api/impl format